# jw-guard

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  atomic-security-type-system.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
adapter-json/: Cargo.toml
adapter-json/src/: lib.rs
adapter-toml/: Cargo.toml
adapter-toml/src/: lib.rs
adapter-yaml/: Cargo.toml
adapter-yaml/src/: lib.rs
canon/: Cargo.toml
canon/src/: canonical_path.rs  deterministic_id.rs  lib.rs  normalize.rs  ordering.rs
cli/: CONTRACT.md  Cargo.toml
cli/src/: error_map.rs  evaluate.rs  lib.rs  main.rs  output_human.rs  output_json.rs  report.rs  schema.rs  validate.rs
core/: Cargo.toml
core/src/: composites.rs  concept_feedback.rs  enums.rs  error.rs  id.rs  l0.rs  lib.rs  scalars.rs  structs.rs  tests.rs  theory.rs  theory_validation.rs  validation.rs
declare/: Cargo.toml
declare/src/: concretise.rs  declaration.rs  error.rs  lib.rs  name.rs  requirement.rs  scope.rs  spec.rs  tests.rs  validation.rs
docs/: STATUS.md  format_convention.md
docs/adr/: 0001-type-only-neutral-core.md  0002-type-axis-lock-l1-l2-l3-provisional.md  0003-three-orthogonal-axes.md  0004-syntax-only-format-adapters.md  0005-uncertainty-preserving-outcomes.md  0006-neutral-mapper-contract.md  README.md
docs/concepts/: 00-terminology.md  01-fundamental-form.md  02-minimum-atoms-and-declarations.md  03-deterministic-concretisation.md  04-loop-control.md  05-l1-type-definition.md  06-l2-typegate.md  07-l3-type-definition.md  08-l4-type-definition.md  09-type-axis-detectability.md  10-graph-primitives-axis.md  11-observation-primitives-axis.md  README.md
docs/examples/: declared_spec.example.json  declared_spec.example.toml  declared_spec.example.yaml  explicit_option_tri_state.json  explicit_option_tri_state.toml  explicit_option_tri_state.yaml
eval/: Cargo.toml
eval/src/: carrier.rs  decision.rs  lib.rs  predicate.rs  property_eval.rs  requirement_eval.rs
integration-tests/: Cargo.toml
integration-tests/tests/: cli_validate.rs  full_pipeline.rs
integration-tests/tests/fixtures/reports/: syntax_error.json  validation_error.json  validation_multi_error.json  wire_error.json
mapper/: Cargo.toml
mapper-docker/: Cargo.toml
mapper-docker/src/: lib.rs
mapper/src/: lib.rs
policy/: edge-budget.yaml  phase-separation.yaml  port-profile.yaml  scope.yaml  transport-routes.yaml
policy-compile/: Cargo.toml
policy-compile/src/: compile.rs  error.rs  lib.rs
policy-docker/: Cargo.toml
policy-docker/src/: lib.rs
policy-schema/: Cargo.toml
policy-schema/src/: document.rs  error.rs  kinds.rs  lib.rs  parse.rs
schemas/: declared-spec-wire.schema.json
vocab-docker/: Cargo.toml
vocab-docker/src/: lib.rs
wire/: Cargo.toml
wire/src/: convert.rs  dto.rs  error.rs  evidence_convert.rs  evidence_dto.rs  lib.rs
wire/tests/: adapter_negative.rs  roundtrip.rs  schema_drift.rs
