[package]
name = "jw-guard-adapter-json"
description = "JSON format adapter for jw-guard declared specs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jw-guard-declare = { path = "../declare", default-features = false, features = ["std"] }
jw-guard-wire = { path = "../wire" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
