[package]
name = "jw-guard-adapter-yaml"
description = "YAML format adapter for jw-guard declared specs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jw-guard-declare = { path = "../declare", default-features = false, features = ["std"] }
jw-guard-wire = { path = "../wire" }
serde_yaml = "0.9"
yaml-rust2 = "0.8"
