[package]
name = "jw-guard"
description = "CLI entrypoint for jw-guard."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "=4.5.0", features = ["derive"] }
jw-guard-core = { path = "../core" }
