[package]
name = "jw-guard-declare"
description = "First-principles declaration layer for jw-guard security requirements."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["jw-guard-core/std"]
serde = ["dep:serde", "jw-guard-core/serde"]

[dependencies]
jw-guard-core = { path = "../core", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
