[package]
name = "jw-guard-declare"
description = "Symbolic declaration layer for jw-guard."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["jw-guard-core/std", "jw-guard-canon/std"]

[dependencies]
jw-guard-core = { path = "../core", default-features = false }
jw-guard-canon = { path = "../canon", default-features = false }
