[package]
name = "jw-guard-mapper"
description = "Neutral deterministic mapping contract for jw-guard observations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["jw-guard-core/std"]

[dependencies]
jw-guard-core = { path = "../core", default-features = false }
