[package]
name = "jw-guard-wire"
description = "Wire DTO and conversion boundary for jw-guard declared specs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jw-guard-core = { path = "../core", default-features = false }
jw-guard-declare = { path = "../declare", default-features = false, features = ["std"] }
jw-guard-mapper = { path = "../mapper", default-features = false }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
jw-guard-adapter-json = { path = "../adapter-json" }
jw-guard-adapter-toml = { path = "../adapter-toml" }
jw-guard-adapter-yaml = { path = "../adapter-yaml" }
